# Document_Portal_LangChain_E2E

./: .gitignore  Dockerfile  README.md  incline_policy.json  pyproject.toml  requirements.txt  setup.py  test.py  version_new.py  versions.py
.DONOTRUN_github/workflows/: aws.yaml  ci.yaml
.github/workflows/: aws.yaml  task_definition.json
api/: main.py
chroma_db/: chroma.sqlite3
config/: config.yaml  constants.py
exception/: custom_exception.py
faiss_index/: index.faiss  index.pkl
faiss_index/session_20250815_012844_50e8f858/: index.faiss  index.pkl
faiss_index/session_20250815_013233_e38a22e9/: index.pkl
faiss_index/session_20250815_013307_b6cc8584/: index.pkl
faiss_index/session_20250815_013537_1e21db3e/: index.pkl
faiss_index/session_20250815_013722_6af6be4a/: index.pkl
faiss_index/session_20250815_015159_17507afe/: index.pkl
faiss_index/session_20251022_074910_f86e91f4/: index.pkl  ingested_meta.json
faiss_index/session_20251022_090535_6b06ae57/: index.pkl  ingested_meta.json
logger/: custom_logger.py  cutom_logger.py
model/: models.py
notebook/: advance_topics.ipynb  experiments.ipynb  logging_experiment.ipynb
notebooks/: data_ingestion.ipynb  exception_experiment.ipynb  logging_experiments.ipynb  playground.ipynb
prompt/: prompt_library.py
src/document_analyzer/: data_analysis.py  data_ingestion.py  document_analysis.py
src/document_compare/: document_compare.py
src/multi_document_chat/: data_ingestion.py  (+1 more)
static/: style.css
templates/: index.html
tests/: test_unit_cases.py
utils/: config_loader.py  model_loader.py
(+5 files in other folders)
