[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Document-Portal-Using-LangChain"
version = "1.0"
authors = [
    { name="Arindam Choudhury" }
]
description = "Document Portal Using LangChain"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]